[tool.poetry]
name = "pyren"
version = "3.0.alpha"
description = ""
authors = ["anatoliis <15053145+anatoliis@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.13"
pyserial = "^3.5"

[tool.poetry.dev-dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
